[Fix]Fixing wrong color code

--- a/0x02-CSS_advanced/styles/2-style.css
+++ b/0x02-CSS_advanced/styles/2-style.css
@@ -11,7 +11,7 @@ a {
     display: none;
 }
 .card-category {
-    color: #D77953;
+    color: #D73953;
 }
 .section-tagline {
     color: #D73953;
